src/main/java/org/example/myproject/error/BussinesExceptionHandler.java
//package org.example.myproject.error;
//
//import org.springframework.http.ResponseEntity;
//import org.springframework.web.ErrorResponse;
//import org.springframework.web.ErrorResponseException;
//import org.springframework.web.bind.annotation.ControllerAdvice;
//import org.springframework.web.bind.annotation.RestControllerAdvice;
//
//@RestControllerAdvice
//public class BussinesExceptionHandler {
//
//    // 비즈니스 로직을 쓸만한 곳이 어디일지 고민 필요. / 재사용성이 필요한 곳.
//
////    public ResponseEntity<ErrorResponse> PassWord{
////
////    }
//}
